<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateOrderItem">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/editOrderHeading"
                style="@style/AllText.TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_order" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/itemToEdit"
                    style="@style/AllText.Item"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="Placeholder Text"
                    android:layout_weight="2"/>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"/>

                <TextView
                    android:id="@+id/itemToEditPrice"
                    style="@style/AllText.Item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/itemPrice" />


            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/itemImage"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/item_image"
                    android:scaleType="centerCrop" />
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <!-- Item reduce-->
                <Button
                    android:id="@+id/quantityReduce"
                    style="@style/ButtonStyle.ReduceButton"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Reduce"
                    tools:text="@string/Reduce" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Quantity"
                    tools:text="@string/Quantity"
                    android:layout_weight="1"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3" />

                <Button
                    android:id="@+id/quantityIncrease"
                    style="@style/ButtonStyle.IncreaseButton"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Increase"
                    tools:text="@string/Increase" />
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/itemTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/itemTotal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/updateToCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/updateCart" />
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>